4주차/haejun/demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app
  labels:
    app: demo
    sbom-verified: "true"
spec:
  containers:
  - name: app
    image: ghcr.io/back1ash/hello-slsa:v1
    imagePullPolicy: IfNotPresent
